packages/@aws-cdk/aws-eks/test/cdk-integ.out/aws-cdk-eks-fargate-cluster-test.template.json
{
  "Resources": {
    "FargateClusterDefaultVpcE69D3A13": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": "aws-cdk-eks-fargate-cluster-test/FargateCluster/DefaultVpc"
          }
        ]
      }
    },
    "FargateClusterDefaultVpcPublicSubnet1Subnet96AFDABC": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.0.0/19",
        "VpcId": {
          "Ref": "FargateClusterDefaultVpcE69D3A13"
        },
        "AvailabilityZone": "us-east-1a",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "kubernetes.io/role/elb",
            "Value": "1"
          },
          {
            "Key": "Name",
            "Value": "aws-cdk-eks-fargate-cluster-test/FargateCluster/DefaultVpc/PublicSubnet1"
          }
        ]
      }
    },
    "FargateClusterDefaultVpcPublicSubnet1RouteTableC2D2B434": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "FargateClusterDefaultVpcE69D3A13"
        },
        "Tags": [
          {
            "Key": "kubernetes.io/role/elb",
            "Value": "1"
          },
          {
            "Key": "Name",
            "Value": "aws-cdk-eks-fargate-cluster-test/FargateCluster/DefaultVpc/PublicSubnet1"
          }
        ]
      }
    },
    "FargateClusterDefaultVpcPublicSubnet1RouteTableAssociation43821F5B": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "FargateClusterDefaultVpcPublicSubnet1RouteTableC2D2B434"
        },
        "SubnetId": {
          "Ref": "FargateClusterDefaultVpcPublicSubnet1Subnet96AFDABC"
        }
      }
    },
    "FargateClusterDefaultVpcPublicSubnet1DefaultRouteA0A93C70": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "FargateClusterDefaultVpcPublicSubnet1RouteTableC2D2B434"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "FargateClusterDefaultVpcIGWFD9278DA"
        }
      },
      "DependsOn": [
        "FargateClusterDefaultVpcVPCGWA7F012E1"
      ]
    },
    "FargateClusterDefaultVpcPublicSubnet1EIP0093A4E0": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "kubernetes.io/role/elb",
            "Value": "1"
          },
          {
            "Key": "Name",
            "Value": "aws-cdk-eks-fargate-cluster-test/FargateCluster/DefaultVpc/PublicSubnet1"
          }
        ]
      }
    },
    "FargateClusterDefaultVpcPublicSubnet1NATGatewayEC4DEB51": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "SubnetId": {
          "Ref": "FargateClusterDefaultVpcPublicSubnet1Subnet96AFDABC"
        },
        "AllocationId": {
          "Fn::GetAtt": [
            "FargateClusterDefaultVpcPublicSubnet1EIP0093A4E0",
            "AllocationId"
          ]
        },
        "Tags": [
          {
            "Key": "kubernetes.io/role/elb",
            "Value": "1"
          },
          {
            "Key": "Name",
            "Value": "aws-cdk-eks-fargate-cluster-test/FargateCluster/DefaultVpc/PublicSubnet1"
          }
        ]
      }
    },
    "FargateClusterDefaultVpcPublicSubnet2Subnet92A9CC93": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.32.0/19",
        "VpcId": {
          "Ref": "FargateClusterDefaultVpcE69D3A13"
        },
        "AvailabilityZone": "us-east-1b",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "kubernetes.io/role/elb",
            "Value": "1"
          },
          {
            "Key": "Name",
            "Value": "aws-cdk-eks-fargate-cluster-test/FargateCluster/DefaultVpc/PublicSubnet2"
          }
        ]
      }
    },
    "FargateClusterDefaultVpcPublicSubnet2RouteTableEDDB89D9": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "FargateClusterDefaultVpcE69D3A13"
        },
        "Tags": [
          {
            "Key": "kubernetes.io/role/elb",
            "Value": "1"
          },
          {
            "Key": "Name",
            "Value": "aws-cdk-eks-fargate-cluster-test/FargateCluster/DefaultVpc/PublicSubnet2"
          }
        ]
      }
    },
    "FargateClusterDefaultVpcPublicSubnet2RouteTableAssociationCF18C87A": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "FargateClusterDefaultVpcPublicSubnet2RouteTableEDDB89D9"
        },
        "SubnetId": {
          "Ref": "FargateClusterDefaultVpcPublicSubnet2Subnet92A9CC93"
        }
      }
    },
    "FargateClusterDefaultVpcPublicSubnet2DefaultRouteABE51CF2": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "FargateClusterDefaultVpcPublicSubnet2RouteTableEDDB89D9"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "FargateClusterDefaultVpcIGWFD9278DA"
        }
      },
      "DependsOn": [
        "FargateClusterDefaultVpcVPCGWA7F012E1"
      ]
    },
    "FargateClusterDefaultVpcPublicSubnet2EIPA4C07B68": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "kubernetes.io/role/elb",
            "Value": "1"
          },
          {
            "Key": "Name",
            "Value": "aws-cdk-eks-fargate-cluster-test/FargateCluster/DefaultVpc/PublicSubnet2"
          }
        ]
      }
    },
    "FargateClusterDefaultVpcPublicSubnet2NATGateway77D6A579": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "SubnetId": {
          "Ref": "FargateClusterDefaultVpcPublicSubnet2Subnet92A9CC93"
        },
        "AllocationId": {
          "Fn::GetAtt": [
            "FargateClusterDefaultVpcPublicSubnet2EIPA4C07B68",
            "AllocationId"
          ]
        },
        "Tags": [
          {
            "Key": "kubernetes.io/role/elb",
            "Value": "1"
          },
          {
            "Key": "Name",
            "Value": "aws-cdk-eks-fargate-cluster-test/FargateCluster/DefaultVpc/PublicSubnet2"
          }
        ]
      }
    },
    "FargateClusterDefaultVpcPublicSubnet3SubnetB408ADA9": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.64.0/19",
        "VpcId": {
          "Ref": "FargateClusterDefaultVpcE69D3A13"
        },
        "AvailabilityZone": "us-east-1c",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "kubernetes.io/role/elb",
            "Value": "1"
          },
          {
            "Key": "Name",
            "Value": "aws-cdk-eks-fargate-cluster-test/FargateCluster/DefaultVpc/PublicSubnet3"
          }
        ]
      }
    },
    "FargateClusterDefaultVpcPublicSubnet3RouteTable4E802182": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "FargateClusterDefaultVpcE69D3A13"
        },
        "Tags": [
          {
            "Key": "kubernetes.io/role/elb",
            "Value": "1"
          },
          {
            "Key": "Name",
            "Value": "aws-cdk-eks-fargate-cluster-test/FargateCluster/DefaultVpc/PublicSubnet3"
          }
        ]
      }
    },
    "FargateClusterDefaultVpcPublicSubnet3RouteTableAssociation93B95514": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "FargateClusterDefaultVpcPublicSubnet3RouteTable4E802182"
        },
        "SubnetId": {
          "Ref": "FargateClusterDefaultVpcPublicSubnet3SubnetB408ADA9"
        }
      }
    },
    "FargateClusterDefaultVpcPublicSubnet3DefaultRoute8341F833": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "FargateClusterDefaultVpcPublicSubnet3RouteTable4E802182"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "FargateClusterDefaultVpcIGWFD9278DA"
        }
      },
      "DependsOn": [
        "FargateClusterDefaultVpcVPCGWA7F012E1"
      ]
    },
    "FargateClusterDefaultVpcPublicSubnet3EIP46E028EF": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "kubernetes.io/role/elb",
            "Value": "1"
          },
          {
            "Key": "Name",
            "Value": "aws-cdk-eks-fargate-cluster-test/FargateCluster/DefaultVpc/PublicSubnet3"
          }
        ]
      }
    },
    "FargateClusterDefaultVpcPublicSubnet3NATGateway0AAE540F": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "SubnetId": {
          "Ref": "FargateClusterDefaultVpcPublicSubnet3SubnetB408ADA9"
        },
        "AllocationId": {
          "Fn::GetAtt": [
            "FargateClusterDefaultVpcPublicSubnet3EIP46E028EF",
            "AllocationId"
          ]
        },
        "Tags": [
          {
            "Key": "kubernetes.io/role/elb",
            "Value": "1"
          },
          {
            "Key": "Name",
            "Value": "aws-cdk-eks-fargate-cluster-test/FargateCluster/DefaultVpc/PublicSubnet3"
          }
        ]
      }
    },
    "FargateClusterDefaultVpcPrivateSubnet1Subnet50EA43AA": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.96.0/19",
        "VpcId": {
          "Ref": "FargateClusterDefaultVpcE69D3A13"
        },
        "AvailabilityZone": "us-east-1a",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "kubernetes.io/role/internal-elb",
            "Value": "1"
          },
          {
            "Key": "Name",
            "Value": "aws-cdk-eks-fargate-cluster-test/FargateCluster/DefaultVpc/PrivateSubnet1"
          }
        ]
      }
    },
    "FargateClusterDefaultVpcPrivateSubnet1RouteTableA42013EB": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "FargateClusterDefaultVpcE69D3A13"
        },
        "Tags": [
          {
            "Key": "kubernetes.io/role/internal-elb",
            "Value": "1"
          },
          {
            "Key": "Name",
            "Value": "aws-cdk-eks-fargate-cluster-test/FargateCluster/DefaultVpc/PrivateSubnet1"
          }
        ]
      }
    },
    "FargateClusterDefaultVpcPrivateSubnet1RouteTableAssociationDC34627F": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "FargateClusterDefaultVpcPrivateSubnet1RouteTableA42013EB"
        },
        "SubnetId": {
          "Ref": "FargateClusterDefaultVpcPrivateSubnet1Subnet50EA43AA"
        }
      }
    },
    "FargateClusterDefaultVpcPrivateSubnet1DefaultRouteE93D7B93": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "FargateClusterDefaultVpcPrivateSubnet1RouteTableA42013EB"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "FargateClusterDefaultVpcPublicSubnet1NATGatewayEC4DEB51"
        }
      }
    },
    "FargateClusterDefaultVpcPrivateSubnet2Subnet0C9D6154": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.128.0/19",
        "VpcId": {
          "Ref": "FargateClusterDefaultVpcE69D3A13"
        },
        "AvailabilityZone": "us-east-1b",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "kubernetes.io/role/internal-elb",
            "Value": "1"
          },
          {
            "Key": "Name",
            "Value": "aws-cdk-eks-fargate-cluster-test/FargateCluster/DefaultVpc/PrivateSubnet2"
          }
        ]
      }
    },
    "FargateClusterDefaultVpcPrivateSubnet2RouteTable1691B33C": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "FargateClusterDefaultVpcE69D3A13"
        },
        "Tags": [
          {
            "Key": "kubernetes.io/role/internal-elb",
            "Value": "1"
          },
          {
            "Key": "Name",
            "Value": "aws-cdk-eks-fargate-cluster-test/FargateCluster/DefaultVpc/PrivateSubnet2"
          }
        ]
      }
    },
    "FargateClusterDefaultVpcPrivateSubnet2RouteTableAssociation6C0234FE": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "FargateClusterDefaultVpcPrivateSubnet2RouteTable1691B33C"
        },
        "SubnetId": {
          "Ref": "FargateClusterDefaultVpcPrivateSubnet2Subnet0C9D6154"
        }
      }
    },
    "FargateClusterDefaultVpcPrivateSubnet2DefaultRouteABCE20FF": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "FargateClusterDefaultVpcPrivateSubnet2RouteTable1691B33C"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "FargateClusterDefaultVpcPublicSubnet2NATGateway77D6A579"
        }
      }
    },
    "FargateClusterDefaultVpcPrivateSubnet3Subnet1F8A52F1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.160.0/19",
        "VpcId": {
          "Ref": "FargateClusterDefaultVpcE69D3A13"
        },
        "AvailabilityZone": "us-east-1c",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "kubernetes.io/role/internal-elb",
            "Value": "1"
          },
          {
            "Key": "Name",
            "Value": "aws-cdk-eks-fargate-cluster-test/FargateCluster/DefaultVpc/PrivateSubnet3"
          }
        ]
      }
    },
    "FargateClusterDefaultVpcPrivateSubnet3RouteTable7D0EEC96": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "FargateClusterDefaultVpcE69D3A13"
        },
        "Tags": [
          {
            "Key": "kubernetes.io/role/internal-elb",
            "Value": "1"
          },
          {
            "Key": "Name",
            "Value": "aws-cdk-eks-fargate-cluster-test/FargateCluster/DefaultVpc/PrivateSubnet3"
          }
        ]
      }
    },
    "FargateClusterDefaultVpcPrivateSubnet3RouteTableAssociationCC0949D8": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "FargateClusterDefaultVpcPrivateSubnet3RouteTable7D0EEC96"
        },
        "SubnetId": {
          "Ref": "FargateClusterDefaultVpcPrivateSubnet3Subnet1F8A52F1"
        }
      }
    },
    "FargateClusterDefaultVpcPrivateSubnet3DefaultRouteEFE144B5": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "FargateClusterDefaultVpcPrivateSubnet3RouteTable7D0EEC96"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "FargateClusterDefaultVpcPublicSubnet3NATGateway0AAE540F"
        }
      }
    },
    "FargateClusterDefaultVpcIGWFD9278DA": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "aws-cdk-eks-fargate-cluster-test/FargateCluster/DefaultVpc"
          }
        ]
      }
    },
    "FargateClusterDefaultVpcVPCGWA7F012E1": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "FargateClusterDefaultVpcE69D3A13"
        },
        "InternetGatewayId": {
          "Ref": "FargateClusterDefaultVpcIGWFD9278DA"
        }
      }
    },
    "FargateClusterRole8E36B33A": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "eks.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition"
                },
                ":iam::aws:policy/AmazonEKSClusterPolicy"
              ]
            ]
          }
        ]
      }
    },
    "FargateClusterControlPlaneSecurityGroup1021A150": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "EKS Control Plane Security Group",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "VpcId": {
          "Ref": "FargateClusterDefaultVpcE69D3A13"
        }
      }
    },
    "FargateClusterCreationRole8C524AD8": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition"
                      },
                      ":iam::495634646531:root"
                    ]
                  ]
                }
              }
            }
          ],
          "Version": "2012-10-17"
        }
      },
      "DependsOn": [
        "FargateClusterDefaultVpcIGWFD9278DA",
        "FargateClusterDefaultVpcPrivateSubnet1DefaultRouteE93D7B93",
        "FargateClusterDefaultVpcPrivateSubnet1RouteTableA42013EB",
        "FargateClusterDefaultVpcPrivateSubnet1RouteTableAssociationDC34627F",
        "FargateClusterDefaultVpcPrivateSubnet1Subnet50EA43AA",
        "FargateClusterDefaultVpcPrivateSubnet2DefaultRouteABCE20FF",
        "FargateClusterDefaultVpcPrivateSubnet2RouteTable1691B33C",
        "FargateClusterDefaultVpcPrivateSubnet2RouteTableAssociation6C0234FE",
        "FargateClusterDefaultVpcPrivateSubnet2Subnet0C9D6154",
        "FargateClusterDefaultVpcPrivateSubnet3DefaultRouteEFE144B5",
        "FargateClusterDefaultVpcPrivateSubnet3RouteTable7D0EEC96",
        "FargateClusterDefaultVpcPrivateSubnet3RouteTableAssociationCC0949D8",
        "FargateClusterDefaultVpcPrivateSubnet3Subnet1F8A52F1",
        "FargateClusterDefaultVpcPublicSubnet1DefaultRouteA0A93C70",
        "FargateClusterDefaultVpcPublicSubnet1EIP0093A4E0",
        "FargateClusterDefaultVpcPublicSubnet1NATGatewayEC4DEB51",
        "FargateClusterDefaultVpcPublicSubnet1RouteTableC2D2B434",
        "FargateClusterDefaultVpcPublicSubnet1RouteTableAssociation43821F5B",
        "FargateClusterDefaultVpcPublicSubnet1Subnet96AFDABC",
        "FargateClusterDefaultVpcPublicSubnet2DefaultRouteABE51CF2",
        "FargateClusterDefaultVpcPublicSubnet2EIPA4C07B68",
        "FargateClusterDefaultVpcPublicSubnet2NATGateway77D6A579",
        "FargateClusterDefaultVpcPublicSubnet2RouteTableEDDB89D9",
        "FargateClusterDefaultVpcPublicSubnet2RouteTableAssociationCF18C87A",
        "FargateClusterDefaultVpcPublicSubnet2Subnet92A9CC93",
        "FargateClusterDefaultVpcPublicSubnet3DefaultRoute8341F833",
        "FargateClusterDefaultVpcPublicSubnet3EIP46E028EF",
        "FargateClusterDefaultVpcPublicSubnet3NATGateway0AAE540F",
        "FargateClusterDefaultVpcPublicSubnet3RouteTable4E802182",
        "FargateClusterDefaultVpcPublicSubnet3RouteTableAssociation93B95514",
        "FargateClusterDefaultVpcPublicSubnet3SubnetB408ADA9",
        "FargateClusterDefaultVpcE69D3A13",
        "FargateClusterDefaultVpcVPCGWA7F012E1"
      ]
    },
    "FargateClusterCreationRoleDefaultPolicy629049D0": {
      "Type": "AWS::IAM::Policy",
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "iam:PassRole",
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "FargateClusterRole8E36B33A",
                  "Arn"
                ]
              }
            },
            {
              "Action": [
                "eks:CreateCluster",
                "eks:DescribeCluster",
                "eks:DescribeUpdate",
                "eks:DeleteCluster",
                "eks:UpdateClusterVersion",
                "eks:UpdateClusterConfig",
                "eks:CreateFargateProfile",
                "eks:TagResource",
                "eks:UntagResource"
              ],
              "Effect": "Allow",
              "Resource": [
                "*"
              ]
            },
            {
              "Action": [
                "eks:DescribeFargateProfile",
                "eks:DeleteFargateProfile"
              ],
              "Effect": "Allow",
              "Resource": "*"
            },
            {
              "Action": [
                "iam:GetRole",
                "iam:listAttachedRolePolicies"
              ],
              "Effect": "Allow",
              "Resource": "*"
            },
            {
              "Action": "iam:CreateServiceLinkedRole",
              "Effect": "Allow",
              "Resource": "*"
            },
            {
              "Action": [
                "ec2:DescribeInstances",
                "ec2:DescribeNetworkInterfaces",
                "ec2:DescribeSecurityGroups",
                "ec2:DescribeSubnets",
                "ec2:DescribeRouteTables",
                "ec2:DescribeDhcpOptions",
                "ec2:DescribeVpcs"
              ],
              "Effect": "Allow",
              "Resource": "*"
            },
            {
              "Action": "iam:PassRole",
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "FargateClusterfargateprofiledefaultPodExecutionRole66F2610E",
                  "Arn"
                ]
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "PolicyName": "FargateClusterCreationRoleDefaultPolicy629049D0",
        "Roles": [
          {
            "Ref": "FargateClusterCreationRole8C524AD8"
          }
        ]
      },
      "DependsOn": [
        "FargateClusterDefaultVpcIGWFD9278DA",
        "FargateClusterDefaultVpcPrivateSubnet1DefaultRouteE93D7B93",
        "FargateClusterDefaultVpcPrivateSubnet1RouteTableA42013EB",
        "FargateClusterDefaultVpcPrivateSubnet1RouteTableAssociationDC34627F",
        "FargateClusterDefaultVpcPrivateSubnet1Subnet50EA43AA",
        "FargateClusterDefaultVpcPrivateSubnet2DefaultRouteABCE20FF",
        "FargateClusterDefaultVpcPrivateSubnet2RouteTable1691B33C",
        "FargateClusterDefaultVpcPrivateSubnet2RouteTableAssociation6C0234FE",
        "FargateClusterDefaultVpcPrivateSubnet2Subnet0C9D6154",
        "FargateClusterDefaultVpcPrivateSubnet3DefaultRouteEFE144B5",
        "FargateClusterDefaultVpcPrivateSubnet3RouteTable7D0EEC96",
        "FargateClusterDefaultVpcPrivateSubnet3RouteTableAssociationCC0949D8",
        "FargateClusterDefaultVpcPrivateSubnet3Subnet1F8A52F1",
        "FargateClusterDefaultVpcPublicSubnet1DefaultRouteA0A93C70",
        "FargateClusterDefaultVpcPublicSubnet1EIP0093A4E0",
        "FargateClusterDefaultVpcPublicSubnet1NATGatewayEC4DEB51",
        "FargateClusterDefaultVpcPublicSubnet1RouteTableC2D2B434",
        "FargateClusterDefaultVpcPublicSubnet1RouteTableAssociation43821F5B",
        "FargateClusterDefaultVpcPublicSubnet1Subnet96AFDABC",
        "FargateClusterDefaultVpcPublicSubnet2DefaultRouteABE51CF2",
        "FargateClusterDefaultVpcPublicSubnet2EIPA4C07B68",
        "FargateClusterDefaultVpcPublicSubnet2NATGateway77D6A579",
        "FargateClusterDefaultVpcPublicSubnet2RouteTableEDDB89D9",
        "FargateClusterDefaultVpcPublicSubnet2RouteTableAssociationCF18C87A",
        "FargateClusterDefaultVpcPublicSubnet2Subnet92A9CC93",
        "FargateClusterDefaultVpcPublicSubnet3DefaultRoute8341F833",
        "FargateClusterDefaultVpcPublicSubnet3EIP46E028EF",
        "FargateClusterDefaultVpcPublicSubnet3NATGateway0AAE540F",
        "FargateClusterDefaultVpcPublicSubnet3RouteTable4E802182",
        "FargateClusterDefaultVpcPublicSubnet3RouteTableAssociation93B95514",
        "FargateClusterDefaultVpcPublicSubnet3SubnetB408ADA9",
        "FargateClusterDefaultVpcE69D3A13",
        "FargateClusterDefaultVpcVPCGWA7F012E1"
      ]
    },
    "FargateCluster019F03E8": {
      "Type": "Custom::AWSCDK-EKS-Cluster",
      "Properties": {
        "ServiceToken": {
          "Fn::GetAtt": [
            "awscdkawseksClusterResourceProviderNestedStackawscdkawseksClusterResourceProviderNestedStackResource9827C454",
            "Outputs.awscdkeksfargateclustertestawscdkawseksClusterResourceProviderframeworkonEventC85EBDF3Arn"
          ]
        },
        "Config": {
          "version": "1.21",
          "roleArn": {
            "Fn::GetAtt": [
              "FargateClusterRole8E36B33A",
              "Arn"
            ]
          },
          "resourcesVpcConfig": {
            "subnetIds": [
              {
                "Ref": "FargateClusterDefaultVpcPublicSubnet1Subnet96AFDABC"
              },
              {
                "Ref": "FargateClusterDefaultVpcPublicSubnet2Subnet92A9CC93"
              },
              {
                "Ref": "FargateClusterDefaultVpcPublicSubnet3SubnetB408ADA9"
              },
              {
                "Ref": "FargateClusterDefaultVpcPrivateSubnet1Subnet50EA43AA"
              },
              {
                "Ref": "FargateClusterDefaultVpcPrivateSubnet2Subnet0C9D6154"
              },
              {
                "Ref": "FargateClusterDefaultVpcPrivateSubnet3Subnet1F8A52F1"
              }
            ],
            "securityGroupIds": [
              {
                "Fn::GetAtt": [
                  "FargateClusterControlPlaneSecurityGroup1021A150",
                  "GroupId"
                ]
              }
            ],
            "endpointPublicAccess": true,
            "endpointPrivateAccess": true
          }
        },
        "AssumeRoleArn": {
          "Fn::GetAtt": [
            "FargateClusterCreationRole8C524AD8",
            "Arn"
          ]
        },
        "AttributesRevision": 2
      },
      "DependsOn": [
        "FargateClusterDefaultVpcIGWFD9278DA",
        "FargateClusterDefaultVpcPrivateSubnet1DefaultRouteE93D7B93",
        "FargateClusterDefaultVpcPrivateSubnet1RouteTableA42013EB",
        "FargateClusterDefaultVpcPrivateSubnet1RouteTableAssociationDC34627F",
        "FargateClusterDefaultVpcPrivateSubnet1Subnet50EA43AA",
        "FargateClusterDefaultVpcPrivateSubnet2DefaultRouteABCE20FF",
        "FargateClusterDefaultVpcPrivateSubnet2RouteTable1691B33C",
        "FargateClusterDefaultVpcPrivateSubnet2RouteTableAssociation6C0234FE",
        "FargateClusterDefaultVpcPrivateSubnet2Subnet0C9D6154",
        "FargateClusterDefaultVpcPrivateSubnet3DefaultRouteEFE144B5",
        "FargateClusterDefaultVpcPrivateSubnet3RouteTable7D0EEC96",
        "FargateClusterDefaultVpcPrivateSubnet3RouteTableAssociationCC0949D8",
        "FargateClusterDefaultVpcPrivateSubnet3Subnet1F8A52F1",
        "FargateClusterDefaultVpcPublicSubnet1DefaultRouteA0A93C70",
        "FargateClusterDefaultVpcPublicSubnet1EIP0093A4E0",
        "FargateClusterDefaultVpcPublicSubnet1NATGatewayEC4DEB51",
        "FargateClusterDefaultVpcPublicSubnet1RouteTableC2D2B434",
        "FargateClusterDefaultVpcPublicSubnet1RouteTableAssociation43821F5B",
        "FargateClusterDefaultVpcPublicSubnet1Subnet96AFDABC",
        "FargateClusterDefaultVpcPublicSubnet2DefaultRouteABE51CF2",
        "FargateClusterDefaultVpcPublicSubnet2EIPA4C07B68",
        "FargateClusterDefaultVpcPublicSubnet2NATGateway77D6A579",
        "FargateClusterDefaultVpcPublicSubnet2RouteTableEDDB89D9",
        "FargateClusterDefaultVpcPublicSubnet2RouteTableAssociationCF18C87A",
        "FargateClusterDefaultVpcPublicSubnet2Subnet92A9CC93",
        "FargateClusterDefaultVpcPublicSubnet3DefaultRoute8341F833",
        "FargateClusterDefaultVpcPublicSubnet3EIP46E028EF",
        "FargateClusterDefaultVpcPublicSubnet3NATGateway0AAE540F",
        "FargateClusterDefaultVpcPublicSubnet3RouteTable4E802182",
        "FargateClusterDefaultVpcPublicSubnet3RouteTableAssociation93B95514",
        "FargateClusterDefaultVpcPublicSubnet3SubnetB408ADA9",
        "FargateClusterDefaultVpcE69D3A13",
        "FargateClusterDefaultVpcVPCGWA7F012E1",
        "FargateClusterCreationRoleDefaultPolicy629049D0",
        "FargateClusterCreationRole8C524AD8"
      ],
      "UpdateReplacePolicy": "Delete",
      "DeletionPolicy": "Delete"
    },
    "FargateClusterKubectlReadyBarrier93746934": {
      "Type": "AWS::SSM::Parameter",
      "Properties": {
        "Type": "String",
        "Value": "aws:cdk:eks:kubectl-ready"
      },
      "DependsOn": [
        "FargateClusterfargateprofiledefaultPodExecutionRole66F2610E",
        "FargateClusterfargateprofiledefault10E54561",
        "FargateClusterCreationRoleDefaultPolicy629049D0",
        "FargateClusterCreationRole8C524AD8",
        "FargateCluster019F03E8"
      ]
    },
    "FargateClusterMastersRole50BAF9FD": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition"
                      },
                      ":iam::495634646531:root"
                    ]
                  ]
                }
              }
            }
          ],
          "Version": "2012-10-17"
        }
      }
    },
    "FargateClusterAwsAuthmanifest1F7A5553": {
      "Type": "Custom::AWSCDK-EKS-KubernetesResource",
      "Properties": {
        "ServiceToken": {
          "Fn::GetAtt": [
            "awscdkawseksKubectlProviderNestedStackawscdkawseksKubectlProviderNestedStackResourceA7AEBA6B",
            "Outputs.awscdkeksfargateclustertestawscdkawseksKubectlProviderframeworkonEvent33B2ACA4Arn"
          ]
        },
        "Manifest": {
          "Fn::Join": [
            "",
            [
              "[{\"apiVersion\":\"v1\",\"kind\":\"ConfigMap\",\"metadata\":{\"name\":\"aws-auth\",\"namespace\":\"kube-system\"},\"data\":{\"mapRoles\":\"[{\\\"rolearn\\\":\\\"",
              {
                "Fn::GetAtt": [
                  "FargateClusterMastersRole50BAF9FD",
                  "Arn"
                ]
              },
              "\\\",\\\"username\\\":\\\"",
              {
                "Fn::GetAtt": [
                  "FargateClusterMastersRole50BAF9FD",
                  "Arn"
                ]
              },
              "\\\",\\\"groups\\\":[\\\"system:masters\\\"]},{\\\"rolearn\\\":\\\"",
              {
                "Fn::GetAtt": [
                  "FargateClusterfargateprofiledefaultPodExecutionRole66F2610E",
                  "Arn"
                ]
              },
              "\\\",\\\"username\\\":\\\"system:node:{{SessionName}}\\\",\\\"groups\\\":[\\\"system:bootstrappers\\\",\\\"system:nodes\\\",\\\"system:node-proxier\\\"]}]\",\"mapUsers\":\"[]\",\"mapAccounts\":\"[]\"}}]"
            ]
          ]
        },
        "ClusterName": {
          "Ref": "FargateCluster019F03E8"
        },
        "RoleArn": {
          "Fn::GetAtt": [
            "FargateClusterCreationRole8C524AD8",
            "Arn"
          ]
        },
        "Overwrite": true
      },
      "DependsOn": [
        "FargateClusterKubectlReadyBarrier93746934"
      ],
      "UpdateReplacePolicy": "Delete",
      "DeletionPolicy": "Delete"
    },
    "FargateClusterCoreDnsComputeTypePatch711BF1B2": {
      "Type": "Custom::AWSCDK-EKS-KubernetesPatch",
      "Properties": {
        "ServiceToken": {
          "Fn::GetAtt": [
            "awscdkawseksKubectlProviderNestedStackawscdkawseksKubectlProviderNestedStackResourceA7AEBA6B",
            "Outputs.awscdkeksfargateclustertestawscdkawseksKubectlProviderframeworkonEvent33B2ACA4Arn"
          ]
        },
        "ResourceName": "deployment/coredns",
        "ResourceNamespace": "kube-system",
        "ApplyPatchJson": "{\"spec\":{\"template\":{\"metadata\":{\"annotations\":{\"eks.amazonaws.com/compute-type\":\"fargate\"}}}}}",
        "RestorePatchJson": "{\"spec\":{\"template\":{\"metadata\":{\"annotations\":{\"eks.amazonaws.com/compute-type\":\"ec2\"}}}}}",
        "ClusterName": {
          "Ref": "FargateCluster019F03E8"
        },
        "RoleArn": {
          "Fn::GetAtt": [
            "FargateClusterCreationRole8C524AD8",
            "Arn"
          ]
        },
        "PatchType": "strategic"
      },
      "DependsOn": [
        "FargateClusterKubectlReadyBarrier93746934"
      ],
      "UpdateReplacePolicy": "Delete",
      "DeletionPolicy": "Delete"
    },
    "FargateClusterfargateprofiledefaultPodExecutionRole66F2610E": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "eks-fargate-pods.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition"
                },
                ":iam::aws:policy/AmazonEKSFargatePodExecutionRolePolicy"
              ]
            ]
          }
        ]
      }
    },
    "FargateClusterfargateprofiledefault10E54561": {
      "Type": "Custom::AWSCDK-EKS-FargateProfile",
      "Properties": {
        "ServiceToken": {
          "Fn::GetAtt": [
            "awscdkawseksClusterResourceProviderNestedStackawscdkawseksClusterResourceProviderNestedStackResource9827C454",
            "Outputs.awscdkeksfargateclustertestawscdkawseksClusterResourceProviderframeworkonEventC85EBDF3Arn"
          ]
        },
        "AssumeRoleArn": {
          "Fn::GetAtt": [
            "FargateClusterCreationRole8C524AD8",
            "Arn"
          ]
        },
        "Config": {
          "clusterName": {
            "Ref": "FargateCluster019F03E8"
          },
          "podExecutionRoleArn": {
            "Fn::GetAtt": [
              "FargateClusterfargateprofiledefaultPodExecutionRole66F2610E",
              "Arn"
            ]
          },
          "selectors": [
            {
              "namespace": "default"
            },
            {
              "namespace": "kube-system"
            }
          ]
        }
      },
      "UpdateReplacePolicy": "Delete",
      "DeletionPolicy": "Delete"
    },
    "awscdkawseksClusterResourceProviderNestedStackawscdkawseksClusterResourceProviderNestedStackResource9827C454": {
      "Type": "AWS::CloudFormation::Stack",
      "Properties": {
        "TemplateURL": {
          "Fn::Join": [
            "",
            [
              "https://s3.us-east-1.",
              {
                "Ref": "AWS::URLSuffix"
              },
              "/",
              {
                "Ref": "AssetParameters95b26340346634303359d4ce14eeec26e9c663637a8c58ed9eafcacc1a80a4d7S3Bucket9C2707E9"
              },
              "/",
              {
                "Fn::Select": [
                  0,
                  {
                    "Fn::Split": [
                      "||",
                      {
                        "Ref": "AssetParameters95b26340346634303359d4ce14eeec26e9c663637a8c58ed9eafcacc1a80a4d7S3VersionKeyE05B304E"
                      }
                    ]
                  }
                ]
              },
              {
                "Fn::Select": [
                  1,
                  {
                    "Fn::Split": [
                      "||",
                      {
                        "Ref": "AssetParameters95b26340346634303359d4ce14eeec26e9c663637a8c58ed9eafcacc1a80a4d7S3VersionKeyE05B304E"
                      }
                    ]
                  }
                ]
              }
            ]
          ]
        },
        "Parameters": {
          "referencetoawscdkeksfargateclustertestFargateClusterCreationRoleFB2229CFArn": {
            "Fn::GetAtt": [
              "FargateClusterCreationRole8C524AD8",
              "Arn"
            ]
          },
          "referencetoawscdkeksfargateclustertestAssetParameters0ba17f8d0cc99614282df4a8e9329e5564b373a7c960c20f5e39a3ea1db31a46S3Bucket8DC885DCRef": {
            "Ref": "AssetParameters0ba17f8d0cc99614282df4a8e9329e5564b373a7c960c20f5e39a3ea1db31a46S3BucketD24B0418"
          },
          "referencetoawscdkeksfargateclustertestAssetParameters0ba17f8d0cc99614282df4a8e9329e5564b373a7c960c20f5e39a3ea1db31a46S3VersionKey449E8894Ref": {
            "Ref": "AssetParameters0ba17f8d0cc99614282df4a8e9329e5564b373a7c960c20f5e39a3ea1db31a46S3VersionKeyD551BE35"
          },
          "referencetoawscdkeksfargateclustertestAssetParametersd1380bb36e9a4e378cf1d8fe7779efa967f218e380fd40aad493f588a9872dd6S3Bucket4227CCC8Ref": {
            "Ref": "AssetParametersd1380bb36e9a4e378cf1d8fe7779efa967f218e380fd40aad493f588a9872dd6S3Bucket04F6B25B"
          },
          "referencetoawscdkeksfargateclustertestAssetParametersd1380bb36e9a4e378cf1d8fe7779efa967f218e380fd40aad493f588a9872dd6S3VersionKeyD7B57F35Ref": {
            "Ref": "AssetParametersd1380bb36e9a4e378cf1d8fe7779efa967f218e380fd40aad493f588a9872dd6S3VersionKey6A7508AF"
          },
          "referencetoawscdkeksfargateclustertestAssetParametersdaeb79e3cee39c9b902dc0d5c780223e227ed573ea60976252947adab5fb2be1S3Bucket8EEF0922Ref": {
            "Ref": "AssetParametersdaeb79e3cee39c9b902dc0d5c780223e227ed573ea60976252947adab5fb2be1S3BucketDC4B98B1"
          },
          "referencetoawscdkeksfargateclustertestAssetParametersdaeb79e3cee39c9b902dc0d5c780223e227ed573ea60976252947adab5fb2be1S3VersionKey47333356Ref": {
            "Ref": "AssetParametersdaeb79e3cee39c9b902dc0d5c780223e227ed573ea60976252947adab5fb2be1S3VersionKeyA495226F"
          }
        }
      },
      "UpdateReplacePolicy": "Delete",
      "DeletionPolicy": "Delete"
    },
    "awscdkawseksKubectlProviderNestedStackawscdkawseksKubectlProviderNestedStackResourceA7AEBA6B": {
      "Type": "AWS::CloudFormation::Stack",
      "Properties": {
        "TemplateURL": {
          "Fn::Join": [
            "",
            [
              "https://s3.us-east-1.",
              {
                "Ref": "AWS::URLSuffix"
              },
              "/",
              {
                "Ref": "AssetParameters43ce4fd59055093cb506c39ae8eccdf3cdbe53b4d310ac381b3a9db3c523d730S3Bucket9850F63C"
              },
              "/",
              {
                "Fn::Select": [
                  0,
                  {
                    "Fn::Split": [
                      "||",
                      {
                        "Ref": "AssetParameters43ce4fd59055093cb506c39ae8eccdf3cdbe53b4d310ac381b3a9db3c523d730S3VersionKey916810E5"
                      }
                    ]
                  }
                ]
              },
              {
                "Fn::Select": [
                  1,
                  {
                    "Fn::Split": [
                      "||",
                      {
                        "Ref": "AssetParameters43ce4fd59055093cb506c39ae8eccdf3cdbe53b4d310ac381b3a9db3c523d730S3VersionKey916810E5"
                      }
                    ]
                  }
                ]
              }
            ]
          ]
        },
        "Parameters": {
          "referencetoawscdkeksfargateclustertestFargateCluster8588769EArn": {
            "Fn::GetAtt": [
              "FargateCluster019F03E8",
              "Arn"
            ]
          },
          "referencetoawscdkeksfargateclustertestFargateClusterCreationRoleFB2229CFArn": {
            "Fn::GetAtt": [
              "FargateClusterCreationRole8C524AD8",
              "Arn"
            ]
          },
          "referencetoawscdkeksfargateclustertestAssetParameters4129bbca38164ecb28fee8e5b674f0d05e5957b4b8ed97d9c950527b5cc4ce10S3BucketC4DF4301Ref": {
            "Ref": "AssetParameters4129bbca38164ecb28fee8e5b674f0d05e5957b4b8ed97d9c950527b5cc4ce10S3BucketC6FAEEC9"
          },
          "referencetoawscdkeksfargateclustertestAssetParameters4129bbca38164ecb28fee8e5b674f0d05e5957b4b8ed97d9c950527b5cc4ce10S3VersionKey013AD4DERef": {
            "Ref": "AssetParameters4129bbca38164ecb28fee8e5b674f0d05e5957b4b8ed97d9c950527b5cc4ce10S3VersionKeyA7EE7421"
          },
          "referencetoawscdkeksfargateclustertestFargateClusterDefaultVpcPrivateSubnet1Subnet0278E6BCRef": {
            "Ref": "FargateClusterDefaultVpcPrivateSubnet1Subnet50EA43AA"
          },
          "referencetoawscdkeksfargateclustertestFargateClusterDefaultVpcPrivateSubnet2Subnet1F1EC575Ref": {
            "Ref": "FargateClusterDefaultVpcPrivateSubnet2Subnet0C9D6154"
          },
          "referencetoawscdkeksfargateclustertestFargateClusterDefaultVpcPrivateSubnet3Subnet3A4CBF94Ref": {
            "Ref": "FargateClusterDefaultVpcPrivateSubnet3Subnet1F8A52F1"
          },
          "referencetoawscdkeksfargateclustertestFargateCluster8588769EClusterSecurityGroupId": {
            "Fn::GetAtt": [
              "FargateCluster019F03E8",
              "ClusterSecurityGroupId"
            ]
          },
          "referencetoawscdkeksfargateclustertestAssetParameterse9882ab123687399f934da0d45effe675ecc8ce13b40cb946f3e1d6141fe8d68S3Bucket4F20F642Ref": {
            "Ref": "AssetParameterse9882ab123687399f934da0d45effe675ecc8ce13b40cb946f3e1d6141fe8d68S3BucketAEADE8C7"
          },
          "referencetoawscdkeksfargateclustertestAssetParameterse9882ab123687399f934da0d45effe675ecc8ce13b40cb946f3e1d6141fe8d68S3VersionKeyB82BAEF8Ref": {
            "Ref": "AssetParameterse9882ab123687399f934da0d45effe675ecc8ce13b40cb946f3e1d6141fe8d68S3VersionKeyE415415F"
          },
          "referencetoawscdkeksfargateclustertestAssetParametersea17febe6d04c66048f3e8e060c71685c0cb53122abceff44842d27bc0d4a03eS3Bucket899EE5ABRef": {
            "Ref": "AssetParametersea17febe6d04c66048f3e8e060c71685c0cb53122abceff44842d27bc0d4a03eS3BucketD3288998"
          },
          "referencetoawscdkeksfargateclustertestAssetParametersea17febe6d04c66048f3e8e060c71685c0cb53122abceff44842d27bc0d4a03eS3VersionKey1296E713Ref": {
            "Ref": "AssetParametersea17febe6d04c66048f3e8e060c71685c0cb53122abceff44842d27bc0d4a03eS3VersionKeyB00C0565"
          },
          "referencetoawscdkeksfargateclustertestAssetParametersdaeb79e3cee39c9b902dc0d5c780223e227ed573ea60976252947adab5fb2be1S3Bucket8EEF0922Ref": {
            "Ref": "AssetParametersdaeb79e3cee39c9b902dc0d5c780223e227ed573ea60976252947adab5fb2be1S3BucketDC4B98B1"
          },
          "referencetoawscdkeksfargateclustertestAssetParametersdaeb79e3cee39c9b902dc0d5c780223e227ed573ea60976252947adab5fb2be1S3VersionKey47333356Ref": {
            "Ref": "AssetParametersdaeb79e3cee39c9b902dc0d5c780223e227ed573ea60976252947adab5fb2be1S3VersionKeyA495226F"
          }
        }
      },
      "UpdateReplacePolicy": "Delete",
      "DeletionPolicy": "Delete"
    }
  },
  "Outputs": {
    "FargateClusterConfigCommand46D4A6C7": {
      "Value": {
        "Fn::Join": [
          "",
          [
            "aws eks update-kubeconfig --name ",
            {
              "Ref": "FargateCluster019F03E8"
            },
            " --region us-east-1 --role-arn ",
            {
              "Fn::GetAtt": [
                "FargateClusterMastersRole50BAF9FD",
                "Arn"
              ]
            }
          ]
        ]
      }
    },
    "FargateClusterGetTokenCommand4ADED7BB": {
      "Value": {
        "Fn::Join": [
          "",
          [
            "aws eks get-token --cluster-name ",
            {
              "Ref": "FargateCluster019F03E8"
            },
            " --region us-east-1 --role-arn ",
            {
              "Fn::GetAtt": [
                "FargateClusterMastersRole50BAF9FD",
                "Arn"
              ]
            }
          ]
        ]
      }
    }
  },
  "Parameters": {
    "AssetParameters0ba17f8d0cc99614282df4a8e9329e5564b373a7c960c20f5e39a3ea1db31a46S3BucketD24B0418": {
      "Type": "String",
      "Description": "S3 bucket for asset \"0ba17f8d0cc99614282df4a8e9329e5564b373a7c960c20f5e39a3ea1db31a46\""
    },
    "AssetParameters0ba17f8d0cc99614282df4a8e9329e5564b373a7c960c20f5e39a3ea1db31a46S3VersionKeyD551BE35": {
      "Type": "String",
      "Description": "S3 key for asset version \"0ba17f8d0cc99614282df4a8e9329e5564b373a7c960c20f5e39a3ea1db31a46\""
    },
    "AssetParameters0ba17f8d0cc99614282df4a8e9329e5564b373a7c960c20f5e39a3ea1db31a46ArtifactHash3CFF2EF6": {
      "Type": "String",
      "Description": "Artifact hash for asset \"0ba17f8d0cc99614282df4a8e9329e5564b373a7c960c20f5e39a3ea1db31a46\""
    },
    "AssetParametersd1380bb36e9a4e378cf1d8fe7779efa967f218e380fd40aad493f588a9872dd6S3Bucket04F6B25B": {
      "Type": "String",
      "Description": "S3 bucket for asset \"d1380bb36e9a4e378cf1d8fe7779efa967f218e380fd40aad493f588a9872dd6\""
    },
    "AssetParametersd1380bb36e9a4e378cf1d8fe7779efa967f218e380fd40aad493f588a9872dd6S3VersionKey6A7508AF": {
      "Type": "String",
      "Description": "S3 key for asset version \"d1380bb36e9a4e378cf1d8fe7779efa967f218e380fd40aad493f588a9872dd6\""
    },
    "AssetParametersd1380bb36e9a4e378cf1d8fe7779efa967f218e380fd40aad493f588a9872dd6ArtifactHashF7473C14": {
      "Type": "String",
      "Description": "Artifact hash for asset \"d1380bb36e9a4e378cf1d8fe7779efa967f218e380fd40aad493f588a9872dd6\""
    },
    "AssetParametersdaeb79e3cee39c9b902dc0d5c780223e227ed573ea60976252947adab5fb2be1S3BucketDC4B98B1": {
      "Type": "String",
      "Description": "S3 bucket for asset \"daeb79e3cee39c9b902dc0d5c780223e227ed573ea60976252947adab5fb2be1\""
    },
    "AssetParametersdaeb79e3cee39c9b902dc0d5c780223e227ed573ea60976252947adab5fb2be1S3VersionKeyA495226F": {
      "Type": "String",
      "Description": "S3 key for asset version \"daeb79e3cee39c9b902dc0d5c780223e227ed573ea60976252947adab5fb2be1\""
    },
    "AssetParametersdaeb79e3cee39c9b902dc0d5c780223e227ed573ea60976252947adab5fb2be1ArtifactHashA521A16F": {
      "Type": "String",
      "Description": "Artifact hash for asset \"daeb79e3cee39c9b902dc0d5c780223e227ed573ea60976252947adab5fb2be1\""
    },
    "AssetParameters4129bbca38164ecb28fee8e5b674f0d05e5957b4b8ed97d9c950527b5cc4ce10S3BucketC6FAEEC9": {
      "Type": "String",
      "Description": "S3 bucket for asset \"4129bbca38164ecb28fee8e5b674f0d05e5957b4b8ed97d9c950527b5cc4ce10\""
    },
    "AssetParameters4129bbca38164ecb28fee8e5b674f0d05e5957b4b8ed97d9c950527b5cc4ce10S3VersionKeyA7EE7421": {
      "Type": "String",
      "Description": "S3 key for asset version \"4129bbca38164ecb28fee8e5b674f0d05e5957b4b8ed97d9c950527b5cc4ce10\""
    },
    "AssetParameters4129bbca38164ecb28fee8e5b674f0d05e5957b4b8ed97d9c950527b5cc4ce10ArtifactHash528547CD": {
      "Type": "String",
      "Description": "Artifact hash for asset \"4129bbca38164ecb28fee8e5b674f0d05e5957b4b8ed97d9c950527b5cc4ce10\""
    },
    "AssetParameterse9882ab123687399f934da0d45effe675ecc8ce13b40cb946f3e1d6141fe8d68S3BucketAEADE8C7": {
      "Type": "String",
      "Description": "S3 bucket for asset \"e9882ab123687399f934da0d45effe675ecc8ce13b40cb946f3e1d6141fe8d68\""
    },
    "AssetParameterse9882ab123687399f934da0d45effe675ecc8ce13b40cb946f3e1d6141fe8d68S3VersionKeyE415415F": {
      "Type": "String",
      "Description": "S3 key for asset version \"e9882ab123687399f934da0d45effe675ecc8ce13b40cb946f3e1d6141fe8d68\""
    },
    "AssetParameterse9882ab123687399f934da0d45effe675ecc8ce13b40cb946f3e1d6141fe8d68ArtifactHashD9A515C3": {
      "Type": "String",
      "Description": "Artifact hash for asset \"e9882ab123687399f934da0d45effe675ecc8ce13b40cb946f3e1d6141fe8d68\""
    },
    "AssetParametersea17febe6d04c66048f3e8e060c71685c0cb53122abceff44842d27bc0d4a03eS3BucketD3288998": {
      "Type": "String",
      "Description": "S3 bucket for asset \"ea17febe6d04c66048f3e8e060c71685c0cb53122abceff44842d27bc0d4a03e\""
    },
    "AssetParametersea17febe6d04c66048f3e8e060c71685c0cb53122abceff44842d27bc0d4a03eS3VersionKeyB00C0565": {
      "Type": "String",
      "Description": "S3 key for asset version \"ea17febe6d04c66048f3e8e060c71685c0cb53122abceff44842d27bc0d4a03e\""
    },
    "AssetParametersea17febe6d04c66048f3e8e060c71685c0cb53122abceff44842d27bc0d4a03eArtifactHash4654D012": {
      "Type": "String",
      "Description": "Artifact hash for asset \"ea17febe6d04c66048f3e8e060c71685c0cb53122abceff44842d27bc0d4a03e\""
    },
    "AssetParameters95b26340346634303359d4ce14eeec26e9c663637a8c58ed9eafcacc1a80a4d7S3Bucket9C2707E9": {
      "Type": "String",
      "Description": "S3 bucket for asset \"95b26340346634303359d4ce14eeec26e9c663637a8c58ed9eafcacc1a80a4d7\""
    },
    "AssetParameters95b26340346634303359d4ce14eeec26e9c663637a8c58ed9eafcacc1a80a4d7S3VersionKeyE05B304E": {
      "Type": "String",
      "Description": "S3 key for asset version \"95b26340346634303359d4ce14eeec26e9c663637a8c58ed9eafcacc1a80a4d7\""
    },
    "AssetParameters95b26340346634303359d4ce14eeec26e9c663637a8c58ed9eafcacc1a80a4d7ArtifactHash283FD723": {
      "Type": "String",
      "Description": "Artifact hash for asset \"95b26340346634303359d4ce14eeec26e9c663637a8c58ed9eafcacc1a80a4d7\""
    },
    "AssetParameters43ce4fd59055093cb506c39ae8eccdf3cdbe53b4d310ac381b3a9db3c523d730S3Bucket9850F63C": {
      "Type": "String",
      "Description": "S3 bucket for asset \"43ce4fd59055093cb506c39ae8eccdf3cdbe53b4d310ac381b3a9db3c523d730\""
    },
    "AssetParameters43ce4fd59055093cb506c39ae8eccdf3cdbe53b4d310ac381b3a9db3c523d730S3VersionKey916810E5": {
      "Type": "String",
      "Description": "S3 key for asset version \"43ce4fd59055093cb506c39ae8eccdf3cdbe53b4d310ac381b3a9db3c523d730\""
    },
    "AssetParameters43ce4fd59055093cb506c39ae8eccdf3cdbe53b4d310ac381b3a9db3c523d730ArtifactHash20D7E89E": {
      "Type": "String",
      "Description": "Artifact hash for asset \"43ce4fd59055093cb506c39ae8eccdf3cdbe53b4d310ac381b3a9db3c523d730\""
    }
  }
}
